# ClionOpenGLSetUp

./: 1_5_MultipleLights.cpp  CMakeCache.txt  CMakeLists.txt  L_0_1-6_BeforeTransform.cpp  L_0_6_BeforeTransform.cpp  L_0_7_Transform.cpp  L_0_8_Axis.cpp  L_0_9_Camera.cpp  L_1_0_ColorInit.cpp  L_1_1_BaseLighting.cpp  L_1_2_Materials.cpp  L_1_3_LightingMaps.cpp  L_1_4_LightCasters.cpp  L_1_5_MultipleLights.cpp  L_7_2_FontTrueType.cpp  Makefile  OpenGLSetup.cbp  README.md  cmake_install.cmake
dependencies/: CMakeLists.txt  Camera.h  filesystem.h  shader.h
dependencies/freetype-2.9.1/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
dependencies/freetype-2.9.1/objs/: autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  type1cid.lo  type42.lo  (+1 more)
dependencies/freetype-2.9.1/objs/.libs/: libfreetype.6.dylib  libfreetype.lai
shaders/: fs_1_3.glsl  vs002.glsl  vs_1_3.glsl
